--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
  <head>
   <title>Event Countdown</title>
@@ -127,12 +127,12 @@
    <input class="button" type='button' id='btnPush4' onclick="sendInfoMsg(this.id);">
   </th>
  </table>
- <!-- 6. Event Table -->            
+  <!-- 6. Event Table -->            
  <table id="table5" class="table">
   <th id= "labelTable5" onclick = showInput(this.id);>
    <p class="eventlabel" id ="addEventLabel5"></p>
    <table id= "innerTable5" class="innertable" onclick = showInput(this.id);>
-    <th>
+    <tr>
      <td class="tile" id='calcY5'></td>
      <td class="tile" id='calcM5'></td>
      <td class="tile" id='calcD5'></td>
@@ -141,7 +141,7 @@
      <td id='labelY5'></td>
      <td id='labelM5'></td>
      <td id='labelD5'></td>
-    </th>
+    </tr>
    </table>
   </th>
   <th class="buttontable">
