--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <style type='text/css'></style>
  </head>
 <font size='6'>Event Countdown</font>
-<font size='1'> by <a href="mailto:webratte+webxdc@mailbox.org">Webratte </a> Version 1.0 beta 2
+<font size='1'> by <a href="mailto:webratte+webxdc@mailbox.org">Webratte </a> Version 1.0
 </font>
 <body>
  <form>
@@ -127,7 +127,7 @@
    <input class="button" type='button' id='btnPush4' onclick="sendInfoMsg(this.id);">
   </th>
  </table>
-  <!-- 6. Event Table -->            
+ <!-- 6. Event Table -->            
  <table id="table5" class="table">
   <th id= "labelTable5" onclick = showInput(this.id);>
    <p class="eventlabel" id ="addEventLabel5"></p>
@@ -196,6 +196,5 @@
  window.page="addevent";
  changeLanguage();
 </script>
-
 </body>
 </html>
