import only newest update...
to keep all instances in sync

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <script src='./calculate.js'></script>
   <script src='./webxdc.js'></script>
   <script src='./sendmsg.js'></script>
+  <script src='./updates.js'></script>
   <style type='text/css'></style>
  </head>
 <font size='6'>Event Countdown</font>
-<font size='1'> by <a href="mailto:webratte+webxdc@mailbox.org">Webratte </a> Version 1.1 beta3
+<font size='1'> by <a href="mailto:webratte+webxdc@mailbox.org">Webratte </a> Version 1.1 beta4
 </font>
 <body>
  <form>
