Ready for Relase v 1.1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <style type='text/css'></style>
  </head>
 <font size='6'>Event Countdown</font>
-<font size='1'> by <a href="mailto:webratte+webxdc@mailbox.org">Webratte </a> Version 1.1 beta4
+<font size='1'> by <a href="mailto:webratte+webxdc@mailbox.org">Webratte </a> Version 1.1
 </font>
 <body>
  <form>
